# Original Author was Kalle@kde.org
# I lifted it in some mater. (Stephan Kulow)
# I used much code from Janos Farkas

dnl Process this file with autoconf to produce a configure script.

AC_INIT(acinclude.m4) dnl a source file from your sub dir

dnl This is so we can use kde-common
AC_CONFIG_AUX_DIR(admin)

dnl This ksh/zsh feature conflicts with `cd blah ; pwd`
unset CDPATH

dnl Checking host/target/build systems, for make, install etc.
AC_CANONICAL_SYSTEM 
dnl Perform program name transformation
AC_ARG_PROGRAM

dnl Automake doc recommends to do this only here. (Janos)
AM_INIT_AUTOMAKE(kmusic, "2.2alpha2") dnl searches for some needed programs

KDE_SET_PREFIX

dnl generate the config header
AM_CONFIG_HEADER(config.h) dnl at the distribution this done

dnl Checks for programs.
AC_CHECK_COMPILERS
AC_ENABLE_SHARED(yes)
AC_ENABLE_STATIC(no)
KDE_PROG_LIBTOOL

dnl for NLS support. Call them in this order!
dnl WITH_NLS is for the po files
AM_KDE_WITH_NLS

AC_PATH_KDE

dnl Perform program name transformation
dnl [why is this done twice?]
AC_ARG_PROGRAM

#MIN_CONFIG

DO_NOT_COMPILE="$DO_NOT_COMPILE"

dnl Checks for header files.
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_CHECK_HEADERS(arts/artsmidi.h)
AC_CHECK_FUNCS(usleep snprintf)

AC_ARG_WITH(alsa, [  --with-alsa             use an alternative driver for GUS],
[
   if test $withval = "yes"; then
     kde_with_alsa=yes
   else
     kde_with_alsa=no
  fi
], kde_with_alsa=no)

if test "$ac_header_sys_soundlib_h" = "no"; then
  kde_with_alsa=no
fi
 
if test "$kde_with_alsa" = "yes"; then
  AC_DEFINE(ALSA, 1, [Define if you have Alsa support])
fi

dnl Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_TIME
CXXFLAGS="$CXXFLAGS -DQT_CLEAN_NAMESPACE -DQT_NO_COMPAT -DQT_NO_ASCII_CAST"

dnl libltdl: we have our own copy in kmusic. To quote Coolo:
dnl
dnl The maintainers of libltdl don't want installed versions of libltdl, to
dnl avoid clashes with system libraries. Besides, the version KDE uses is
dnl practically unreleased.
ac_configure_args="$ac_configure_args --enable-ltdl-convenience"
AC_CONFIG_SUBDIRS(libltdl)
AM_PATH_GLIB(1.2.0)
KDE_CREATE_SUBDIRSLIST
AC_OUTPUT( \
./Makefile \
)
